--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ loader_version=0.15.9
 
 # Mod Properties
 mod_version=0.1-1.20.4
-maven_group=net.owensaug.modteste
-archives_base_name=modteste
+maven_group=net.owensaug.mccource
+archives_base_name=mccource
 
 # Dependencies
 fabric_version=0.96.11+1.20.4
